add namespace to searxng configmap

--- a/kubernetes/cluster0/apps/home/searxng/app/kustomization.yaml
+++ b/kubernetes/cluster0/apps/home/searxng/app/kustomization.yaml
@@ -4,6 +4,7 @@ resources:
   - ./helm-release.yaml
 configMapGenerator:
   - name: searxng-config
+    namespace: home
     files:
       - settings.yml=./settings.yml
       - limiter.toml=./limiter.toml
