--- a/kubernetes/cluster0/apps/home/searxng/app/helm-release.yaml
+++ b/kubernetes/cluster0/apps/home/searxng/app/helm-release.yaml
@@ -44,7 +44,9 @@ spec:
       main:
         annotations:
           traefik.ingress.kubernetes.io/router.entrypoints: websecure
+          traefik.ingress.kubernetes.io/router.middlewares: "auth-chain-authelia-auth@kubernetescrd"
           external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_PUBLIC_DOMAIN}"
+          external-dns/is-public: "true"
         hosts:
           - host: search.${SECRET_PUBLIC_DOMAIN}
             paths:
