--- a/kubernetes/cluster0/apps/home/searxng/app/helm-release.yaml
+++ b/kubernetes/cluster0/apps/home/searxng/app/helm-release.yaml
@@ -33,7 +33,7 @@ spec:
               SEARXNG_BASE_URL: https://search.${SECRET_PUBLIC_DOMAIN}
               SEARXNG_URL: https://search.${SECRET_PUBLIC_DOMAIN}
               INSTANCE_NAME: tinfoilforest
-              SEARXNG_REDIS_URL: http://searxng-redis.home.svc.cluster.loacl:6379
+              SEARXNG_REDIS_URL: redis://searxng-redis.home.svc.cluster.loacl:6379
     service:
       searxng:
         controller: searxng
