--- a/kubernetes/cluster0/apps/home/searxng/app/settings.yml
+++ b/kubernetes/cluster0/apps/home/searxng/app/settings.yml
@@ -59,6 +59,7 @@ search:
     - json
 
 server:
+  secret_key: "i-dont-understand-why-this-is-needed"
   # If your instance owns a /etc/searxng/settings.yml file, then set the following
   # Proxying image results through searx
   image_proxy: false
