explicit auth false on redis for searx

--- a/kubernetes/cluster0/apps/home/searxng/redis/helm-release.yaml
+++ b/kubernetes/cluster0/apps/home/searxng/redis/helm-release.yaml
@@ -28,6 +28,8 @@ spec:
     global:
       storageClass: longhorn
     architecture: standalone
+    auth:
+      enabled: false
     master:
       persistence:
-        size: 500Mi
+        size: 100Mi
