added some health checks for cilium and coredns k files

--- a/kubernetes/cluster0/apps/kube-system/coredns/ks.yaml
+++ b/kubernetes/cluster0/apps/kube-system/coredns/ks.yaml
@@ -11,6 +11,11 @@ spec:
   sourceRef:
     kind: GitRepository
     name: home-ops-cluster0
+  healthChecks:
+    - apiVersion: helm.toolkit.fluxcd.io/v2beta1
+      kind: HelmRelease
+      name: coredns
+      namespace: kube-system
   wait: false
   interval: 30m
   retryInterval: 1m
