fix traefik log level

--- a/kubernetes/cluster0/apps/networking/traefik/app/helm-release.yaml
+++ b/kubernetes/cluster0/apps/networking/traefik/app/helm-release.yaml
@@ -81,6 +81,6 @@ spec:
           options: "default"
     logs:
       general:
-        level: debug
+        level: "INFO"
       access:
         enabled: true
