--- a/kubernetes/cluster0/apps/networking/blocky/app/helm-release-primary.yaml
+++ b/kubernetes/cluster0/apps/networking/blocky/app/helm-release-primary.yaml
@@ -84,9 +84,12 @@ spec:
           # dns-tcp:
           #   port: *port
           #   protocol: TCP
-          dns-udp:
+          # dns-udp:
+          #   port: *port
+          #   protocol: UDP
+          dns:
             port: *port
-            protocol: UDP
+            protocol: ANY
     serviceMonitor:
       main:
         serviceName: *app
