--- a/kubernetes/cluster0/apps/kube-system/cilium/app/helm-release.yaml
+++ b/kubernetes/cluster0/apps/kube-system/cilium/app/helm-release.yaml
@@ -86,8 +86,8 @@ spec:
     ipv4NativeRoutingCIDR: 10.42.0.0/16
     k8sServiceHost: ${CONTROLPLANE_IP}
     k8sServicePort: 6443
-    kubeProxyReplacement: true
-    kubeProxyReplacementHealthzBindAddr: 0.0.0.0:10256
+    nodePort:
+      enabled: true
     l2announcements:
       enabled: true
       leaseDuration: 120s
