don't verify tls

--- a/kubernetes/cluster0/apps/networking/cloudflared/app/helm-release.yaml
+++ b/kubernetes/cluster0/apps/networking/cloudflared/app/helm-release.yaml
@@ -109,6 +109,8 @@ spec:
                   originServerName: tun.${SECRET_PUBLIC_DOMAIN}
               - hostname: "k8s.${SECRET_PUBLIC_DOMAIN}"
                 service: https://10.87.42.0.6443
+                originRequest:
+                  noTLSVerify: true
               - service: http_status:404
 
     persistence:
