--- a/kubernetes/cluster0/apps/networking/cloudflared/app/helm-release.yaml
+++ b/kubernetes/cluster0/apps/networking/cloudflared/app/helm-release.yaml
@@ -111,6 +111,7 @@ spec:
                 service: https://10.87.42.0.6443
                 originRequest:
                   noTLSVerify: true
+                  originServerName: k8s.${SECRET_PUBLIC_DOMAIN}
               - service: http_status:404
 
     persistence:
