--- a/kubernetes/cluster0/apps/networking/traefik/external-services/kustomization.yaml
+++ b/kubernetes/cluster0/apps/networking/traefik/external-services/kustomization.yaml
@@ -3,6 +3,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: networking
 resources:
+  - ./kube-networking.yaml
   - ./nas0-networking.yaml
-  - ./unifi-networking.yaml
   - ./octoprint-networking.yaml
+  - ./unifi-networking.yaml
